exports[`test Button demo ButtonGroup 1`] = `
<div>
  <h4>
    Basic
  </h4>
  <div
    className=" wl-btn-group">
    <button
      className=" wl-btn wl-btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        Cancel
      </span>
    </button>
    <button
      className=" wl-btn wl-btn-primary"
      disabled={false}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        OK
      </span>
    </button>
  </div>
  <div
    className=" wl-btn-group">
    <button
      className=" wl-btn wl-btn-default"
      disabled={true}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        L
      </span>
    </button>
    <button
      className=" wl-btn wl-btn-default"
      disabled={true}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        M
      </span>
    </button>
    <button
      className=" wl-btn wl-btn-default"
      disabled={true}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        R
      </span>
    </button>
  </div>
  <div
    className=" wl-btn-group">
    <button
      className=" wl-btn wl-btn-primary"
      disabled={false}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        L
      </span>
    </button>
    <button
      className=" wl-btn wl-btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        M
      </span>
    </button>
    <button
      className=" wl-btn wl-btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        M
      </span>
    </button>
    <button
      className=" wl-btn wl-btn-dashed"
      disabled={false}
      onClick={[Function]}
      onMouseUp={[Function]}
      type="button">
      
      <span>
        R
      </span>
    </button>
  </div>
</div>
`;

exports[`test Button demo basic 1`] = `
<div>
  <button
    className=" wl-btn wl-btn-primary"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Primary
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-default"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Default
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-dashed"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Dashed
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-danger"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Danger
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-ghost"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Ghost
    </span>
  </button>
</div>
`;

exports[`test Button demo disabled 1`] = `
<div>
  <button
    className=" wl-btn wl-btn-primary"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Primary
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-primary"
    disabled={true}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Primary(disabled)
    </span>
  </button>
  <br />
  <button
    className=" wl-btn wl-btn-default"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Default
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-default"
    disabled={true}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Default(disabled)
    </span>
  </button>
  <br />
  <button
    className=" wl-btn wl-btn-default"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Ghost
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-default"
    disabled={true}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Ghost(disabled)
    </span>
  </button>
  <br />
  <button
    className=" wl-btn wl-btn-dashed"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Dashed
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-dashed"
    disabled={true}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Dashed(disabled)
    </span>
  </button>
</div>
`;

exports[`test Button demo fullWidth 1`] = `
<div>
  <button
    className=" wl-btn wl-btn-primary wl-btn-full-width"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      fullWidth
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-primary"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Normal
    </span>
  </button>
</div>
`;

exports[`test Button demo ghost 1`] = `
<div
  style={
    Object {
      "background": "rgb(190, 200, 200)",
      "padding": "26px 16px 16px",
    }
  }>
  <button
    className=" wl-btn wl-btn-primary wl-btn-bg-ghost"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Primary
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-default wl-btn-bg-ghost"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Default
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-dashed wl-btn-bg-ghost"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Dashed
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-danger wl-btn-bg-ghost"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      danger
    </span>
  </button>
</div>
`;

exports[`test Button demo loading 1`] = `
<div>
  <button
    className=" wl-btn wl-btn-primary wl-btn-loading"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    <div
      className="wl-btn-loader" />
    <span>
      Loading
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-sm wl-btn-primary wl-btn-loading"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    <div
      className="wl-btn-loader" />
    <span>
      Loading
    </span>
  </button>
  <br />
  <button
    className=" wl-btn wl-btn-circle wl-btn-default wl-btn-loading wl-btn-icon-only"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    <div
      className="wl-btn-loader" />
  </button>
  <button
    className=" wl-btn wl-btn-circle wl-btn-primary wl-btn-loading wl-btn-icon-only"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    <div
      className="wl-btn-loader" />
  </button>
</div>
`;

exports[`test Button demo size 1`] = `
<div>
  <button
    className=" wl-btn wl-btn-lg wl-btn-primary"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Large
    </span>
  </button>
  <button
    className=" wl-btn wl-btn-sm wl-btn-primary"
    disabled={false}
    onClick={[Function]}
    onMouseUp={[Function]}
    type="button">
    
    <span>
      Small
    </span>
  </button>
</div>
`;
